@@ -3,19 +3,18 @@ package org.opencds.cqf.fhir.cr.measure.r4;
 import static org.opencds.cqf.fhir.cr.measure.common.MeasurePopulationType.DATEOFCOMPLIANCE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.CQFM_SCORING_EXT_URL;
-import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.FHIR_ALL_TYPES_SYSTEM_URL;
-import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.IMPROVEMENT_NOTATION_SYSTEM_DECREASE;
-import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.IMPROVEMENT_NOTATION_SYSTEM_INCREASE;
+import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.EXT_CQFM_AGGREGATE_METHOD_URL;
+import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.EXT_CQFM_CRITERIA_REFERENCE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.MEASUREREPORT_IMPROVEMENT_NOTATION_EXTENSION;
-import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.MEASUREREPORT_IMPROVEMENT_NOTATION_SYSTEM;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.SDE_USAGE_CODE;
 
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
+import jakarta.annotation.Nonnull;
 import jakarta.annotation.Nullable;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
@@ -30,8 +29,10 @@ import org.hl7.fhir.r4.model.Measure.MeasureGroupStratifierComponent;
 import org.hl7.fhir.r4.model.Measure.MeasureGroupStratifierComponentComponent;
 import org.hl7.fhir.r4.model.Measure.MeasureSupplementalDataComponent;
 import org.hl7.fhir.r4.model.Resource;
+import org.opencds.cqf.fhir.cr.measure.MeasureStratifierType;
 import org.opencds.cqf.fhir.cr.measure.common.CodeDef;
 import org.opencds.cqf.fhir.cr.measure.common.ConceptDef;
+import org.opencds.cqf.fhir.cr.measure.common.ContinuousVariableObservationAggregateMethod;
 import org.opencds.cqf.fhir.cr.measure.common.GroupDef;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureDef;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureDefBuilder;
@@ -44,19 +45,11 @@ import org.opencds.cqf.fhir.cr.measure.common.StratifierDef;
 import org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants;
 
 public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
+
     @Override
     public MeasureDef build(Measure measure) {
         checkId(measure);
 
-        // SDES
-        List<SdeDef> sdes = new ArrayList<>();
-        for (MeasureSupplementalDataComponent s : measure.getSupplementalData()) {
-            checkId(s);
-            checkSDEUsage(measure, s);
-            var sdeDef = new SdeDef(
-                    s.getId(), conceptToConceptDef(s.getCode()), s.getCriteria().getExpression());
-            sdes.add(sdeDef);
-        }
         // scoring
         var measureScoring = getMeasureScoring(measure);
         // populationBasis
@@ -67,90 +60,245 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
         // Groups
         List<GroupDef> groups = new ArrayList<>();
         for (MeasureGroupComponent group : measure.getGroup()) {
-            // group Measure Scoring
-            var groupScoring = getGroupMeasureScoring(measure, group);
-            // populationBasis
-            var groupBasis = getGroupPopulationBasis(group);
-            // improvement Notation
-            var groupImpNotation = getGroupImpNotation(measure, group);
-            var hasGroupImpNotation = groupImpNotation != null;
+            var groupDef = buildGroupDef(measure, group, measureScoring, measureImpNotation, measureBasis);
 
-            // Populations
-            List<PopulationDef> populations = new ArrayList<>();
-            for (MeasureGroupPopulationComponent pop : group.getPopulation()) {
-                checkId(pop);
-                MeasurePopulationType populationType = MeasurePopulationType.fromCode(
-                        pop.getCode().getCodingFirstRep().getCode());
-
-                populations.add(new PopulationDef(
-                        pop.getId(),
-                        conceptToConceptDef(pop.getCode()),
-                        populationType,
-                        pop.getCriteria().getExpression()));
-            }
-
-            if (group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL) != null
-                    && checkPopulationForCode(populations, DATEOFCOMPLIANCE) == null) {
-                // add to definition
-                var expressionType = (Expression) group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL)
-                        .getValue();
-                if (!expressionType.hasExpression()) {
-                    throw new InvalidRequestException("no expression was listed for extension: %s for Measure: %s"
-                            .formatted(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL, measure.getUrl()));
-                }
-                var expression = expressionType.getExpression();
-                populations.add(new PopulationDef(
-                        "dateOfCompliance", totalConceptDefCreator(DATEOFCOMPLIANCE), DATEOFCOMPLIANCE, expression));
-            }
-
-            // Stratifiers
-            List<StratifierDef> stratifiers = new ArrayList<>();
-            for (MeasureGroupStratifierComponent mgsc : group.getStratifier()) {
-                checkId(mgsc);
-
-                // Components
-                var components = new ArrayList<StratifierComponentDef>();
-                for (MeasureGroupStratifierComponentComponent scc : mgsc.getComponent()) {
-                    checkId(scc);
-                    var scd = new StratifierComponentDef(
-                            scc.getId(),
-                            conceptToConceptDef(scc.getCode()),
-                            scc.hasCriteria() ? scc.getCriteria().getExpression() : null);
-
-                    components.add(scd);
-                }
-
-                if (!components.isEmpty() && mgsc.getCriteria().getExpression() != null) {
-                    throw new InvalidRequestException(
-                            "Measure stratifier: %s, has both component and stratifier criteria expression defined. Only one should be specified"
-                                    .formatted(mgsc.getId()));
-                }
-
-                var stratifierDef = new StratifierDef(
-                        mgsc.getId(),
-                        conceptToConceptDef(mgsc.getCode()),
-                        mgsc.getCriteria().getExpression(),
-                        components);
-
-                stratifiers.add(stratifierDef);
-            }
-
-            var groupDef = new GroupDef(
-                    group.getId(),
-                    conceptToConceptDef(group.getCode()),
-                    stratifiers,
-                    populations,
-                    getScoringDef(measure, measureScoring, groupScoring),
-                    hasGroupImpNotation,
-                    getImprovementNotation(measureImpNotation, groupImpNotation),
-                    getPopulationBasisDef(measureBasis, groupBasis));
             groups.add(groupDef);
         }
-        return new MeasureDef(measure.getId(), measure.getUrl(), measure.getVersion(), groups, sdes);
+
+        return new MeasureDef(
+                // We don't need either the version of the "Measure" qualifier here
+                measure.getIdElement(), measure.getUrl(), measure.getVersion(), groups, getSdeDefs(measure));
+    }
+
+    private GroupDef buildGroupDef(
+            Measure measure,
+            MeasureGroupComponent group,
+            MeasureScoring measureScoring,
+            CodeDef measureImpNotation,
+            CodeDef measureBasis) {
+
+        // group Measure Scoring
+        var groupScoring = getGroupMeasureScoring(measure, group);
+        // populationBasis
+        var groupBasis = getGroupPopulationBasis(group);
+        // improvement Notation
+        var groupImpNotation = getGroupImpNotation(measure, group);
+        var hasGroupImpNotation = groupImpNotation != null;
+
+        // Populations
+        checkIds(group);
+
+        var populationBasisDef = getPopulationBasisDef(measureBasis, groupBasis);
+        var populationsWithCriteriaReference = group.getPopulation().stream()
+                .map(t -> buildPopulationDef(t, group, measure.getUrl(), populationBasisDef))
+                .toList();
+
+        final Optional<PopulationDef> optPopulationDefDateOfCompliance = buildPopulationDefForDateOfCompliance(
+                measure.getUrl(), group, populationsWithCriteriaReference, populationBasisDef);
+
+        // Stratifiers
+        var stratifiers = group.getStratifier().stream()
+                .map(mgsc -> buildStratifierDef(measure.getUrl(), mgsc))
+                .toList();
+
+        return new GroupDef(
+                group.getId(),
+                conceptToConceptDef(group.getCode()),
+                stratifiers,
+                mergePopulations(populationsWithCriteriaReference, optPopulationDefDateOfCompliance.orElse(null)),
+                getScoringDef(measure.getUrl(), measureScoring, groupScoring),
+                hasGroupImpNotation,
+                getImprovementNotation(measureImpNotation, groupImpNotation),
+                populationBasisDef);
+    }
+
+    private void checkIds(MeasureGroupComponent group) {
+        group.getPopulation().forEach(R4MeasureDefBuilder::checkId);
+    }
+
+    @Nonnull
+    private PopulationDef buildPopulationDef(
+            MeasureGroupPopulationComponent population,
+            MeasureGroupComponent group,
+            String measureUrl,
+            CodeDef populationBasis) {
+        MeasurePopulationType popType = MeasurePopulationType.fromCode(
+                population.getCode().getCodingFirstRep().getCode());
+        // criteriaReference & aggregateMethod are for MeasureObservation populations only
+        String criteriaReference = getCriteriaReference(group, population, popType, measureUrl);
+        ContinuousVariableObservationAggregateMethod aggregateMethod = getAggregateMethod(measureUrl, population);
+        return new PopulationDef(
+                population.getId(),
+                conceptToConceptDef(population.getCode()),
+                popType,
+                population.getCriteria().getExpression(),
+                populationBasis,
+                criteriaReference,
+                aggregateMethod);
+    }
+
+    private Optional<PopulationDef> buildPopulationDefForDateOfCompliance(
+            String measureUrl,
+            MeasureGroupComponent group,
+            List<PopulationDef> populationDefs,
+            CodeDef populationBasis) {
+
+        if (group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL) == null
+                || checkPopulationForCode(populationDefs, DATEOFCOMPLIANCE) == null) {
+            return Optional.empty();
+        }
+
+        // add to definition
+        var expressionType = (Expression) group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL)
+                .getValue();
+        if (!expressionType.hasExpression()) {
+            throw new InvalidRequestException("no expression was listed for extension: %s for Measure: %s"
+                    .formatted(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL, measureUrl));
+        }
+        var expression = expressionType.getExpression();
+        var populateDefDateOfCompliance = new PopulationDef(
+                "dateOfCompliance",
+                totalConceptDefCreator(DATEOFCOMPLIANCE),
+                DATEOFCOMPLIANCE,
+                expression,
+                populationBasis);
+
+        return Optional.of(populateDefDateOfCompliance);
+    }
+
+    private ContinuousVariableObservationAggregateMethod getAggregateMethod(
+            String measureUrl, @Nullable MeasureGroupPopulationComponent measureObservationPopulation) {
+
+        if (measureObservationPopulation == null) {
+            return ContinuousVariableObservationAggregateMethod.N_A;
+        }
+
+        var aggMethodExt = measureObservationPopulation.getExtensionByUrl(EXT_CQFM_AGGREGATE_METHOD_URL);
+        if (aggMethodExt != null) {
+            // this method is only required if scoringType = continuous-variable or Ratio Continuous variable
+            var aggregateMethodString = aggMethodExt.getValue().toString();
+
+            var aggregateMethod = ContinuousVariableObservationAggregateMethod.fromString(aggregateMethodString);
+
+            // check that method is accepted
+            if (aggregateMethod == null) {
+                throw new InvalidRequestException("Measure Observation method: %s is not a valid value for Measure: %s"
+                        .formatted(aggregateMethodString, measureUrl));
+            }
+
+            return aggregateMethod;
+        }
+
+        return ContinuousVariableObservationAggregateMethod.N_A;
+    }
+
+    @Nullable
+    private String getCriteriaReference(
+            MeasureGroupComponent group,
+            @Nullable MeasureGroupPopulationComponent population,
+            MeasurePopulationType measurePopulationType,
+            String measureUrl) {
+
+        if (!measurePopulationType.equals(MeasurePopulationType.MEASUREOBSERVATION)) {
+            return null;
+        }
+
+        if (population == null) {
+            throw new InvalidRequestException("group.population is null");
+        }
+        var populationCriteriaExt = population.getExtensionByUrl(EXT_CQFM_CRITERIA_REFERENCE);
+        if (populationCriteriaExt != null) {
+            // required for measure-observation populations
+            // the underlying expression is a cql function
+            // the criteria reference is what is used to populate parameters of the function
+            String critReference = populationCriteriaExt.getValue().toString();
+            // check that the reference exists in the GroupDef.populationId
+            if (group.getPopulation().stream().map(Element::getId).noneMatch(id -> id.equals(critReference))) {
+                throw new InvalidRequestException(
+                        "no matching criteria reference was found for extension: %s for Measure: %s"
+                                .formatted(EXT_CQFM_CRITERIA_REFERENCE, measureUrl));
+            }
+            // assign validated reference
+            return critReference;
+        }
+
+        return null;
+    }
+
+    @Nonnull
+    private StratifierDef buildStratifierDef(String measureUrl, MeasureGroupStratifierComponent mgsc) {
+        checkId(mgsc);
+
+        // Components
+        var components = new ArrayList<StratifierComponentDef>();
+        for (MeasureGroupStratifierComponentComponent scc : mgsc.getComponent()) {
+            checkId(scc);
+            var scd = new StratifierComponentDef(
+                    scc.getId(),
+                    conceptToConceptDef(scc.getCode()),
+                    scc.hasCriteria() ? scc.getCriteria().getExpression() : null);
+
+            components.add(scd);
+        }
+
+        if (!components.isEmpty() && mgsc.getCriteria().getExpression() != null) {
+            throw new InvalidRequestException(
+                    "Measure: %s with stratifier: %s, has both components and stratifier criteria expressions defined. Only one should be specified"
+                            .formatted(measureUrl, mgsc.getId()));
+        }
+
+        return new StratifierDef(
+                mgsc.getId(),
+                conceptToConceptDef(mgsc.getCode()),
+                mgsc.getCriteria().getExpression(),
+                getStratifierType(measureUrl, mgsc),
+                components);
     }
 
     public static void triggerFirstPassValidation(List<Measure> measures) {
         measures.forEach(R4MeasureDefBuilder::triggerFirstPassValidation);
+    }
+
+    @Nonnull
+    private List<SdeDef> getSdeDefs(Measure measure) {
+        final List<SdeDef> sdes = new ArrayList<>();
+        for (MeasureSupplementalDataComponent s : measure.getSupplementalData()) {
+            checkId(s);
+            checkSDEUsage(measure, s);
+            var sdeDef = new SdeDef(
+                    s.getId(), conceptToConceptDef(s.getCode()), s.getCriteria().getExpression());
+            sdes.add(sdeDef);
+        }
+        return sdes;
+    }
+
+    private static MeasureStratifierType getStratifierType(
+            String measureUrl, MeasureGroupStratifierComponent measureGroupStratifierComponent) {
+        if (measureGroupStratifierComponent == null) {
+            return MeasureStratifierType.VALUE;
+        }
+
+        final boolean hasCriteria = measureGroupStratifierComponent.hasCriteria();
+
+        final boolean hasAnyComponentCriteria = measureGroupStratifierComponent.getComponent().stream()
+                .anyMatch(MeasureGroupStratifierComponentComponent::hasCriteria);
+
+        if (hasCriteria && hasAnyComponentCriteria) {
+            throw new InvalidRequestException(
+                    "Stratifier Cannot have both criteria: %s and any component criteria: %s for measure: %s"
+                            .formatted(hasCriteria, hasAnyComponentCriteria, measureUrl));
+        }
+
+        if (!hasCriteria && !hasAnyComponentCriteria) {
+            throw new InvalidRequestException(
+                    "Stratifier cannot have neither criteria nor component for measure: %s".formatted(measureUrl));
+        }
+
+        if (hasCriteria) {
+            return MeasureStratifierType.CRITERIA;
+        }
+
+        return MeasureStratifierType.VALUE;
     }
 
     private static void triggerFirstPassValidation(Measure measure) {
@@ -162,33 +310,22 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
             checkId(s);
             checkSDEUsage(measure, s);
         }
+
+        // Create instance to call instance methods
+        var builder = new R4MeasureDefBuilder();
+
         // scoring
-        getMeasureScoring(measure);
+        builder.getMeasureScoring(measure);
 
-        validateMeasureImprovementNotation(measure);
-    }
-
-    private PopulationDef checkPopulationForCode(
-            List<PopulationDef> populations, MeasurePopulationType measurePopType) {
-        return populations.stream()
-                .filter(e -> e.code().first().code().equals(measurePopType.toCode()))
-                .findAny()
-                .orElse(null);
-    }
-
-    private ConceptDef totalConceptDefCreator(MeasurePopulationType measurePopulationType) {
-        return new ConceptDef(
-                Collections.singletonList(
-                        new CodeDef(measurePopulationType.getSystem(), measurePopulationType.toCode())),
-                null);
+        builder.validateMeasureImprovementNotation(measure);
     }
 
     private static void checkSDEUsage(
             Measure measure, MeasureSupplementalDataComponent measureSupplementalDataComponent) {
         var hasUsage = measureSupplementalDataComponent.getUsage().stream()
                 .filter(t -> t.getCodingFirstRep().getCode().equals(SDE_USAGE_CODE))
-                .collect(Collectors.toList());
-        if (hasUsage == null || hasUsage.isEmpty()) {
+                .toList();
+        if (CollectionUtils.isEmpty(hasUsage)) {
             throw new InvalidRequestException("SupplementalDataComponent usage is missing code: %s for Measure: %s"
                     .formatted(SDE_USAGE_CODE, measure.getUrl()));
         }
@@ -213,46 +350,19 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
 
     private static void checkId(Element e) {
         if (e.getId() == null || StringUtils.isBlank(e.getId())) {
-            throw new NullPointerException("id is required on all Elements of type: " + e.fhirType());
+            throw new InvalidRequestException("id is required on all Elements of type: " + e.fhirType());
         }
     }
 
     private static void checkId(Resource r) {
         if (r.getId() == null || StringUtils.isBlank(r.getId())) {
-            throw new NullPointerException("id is required on all Resources of type: " + r.fhirType());
+            throw new InvalidRequestException("id is required on all Resources of type: " + r.fhirType());
         }
     }
 
-    private static MeasureScoring getMeasureScoring(Measure measure, @Nullable String scoringCode) {
-        if (scoringCode != null) {
-            var code = MeasureScoring.fromCode(scoringCode);
-            if (code == null) {
-                throw new InvalidRequestException(
-                        "Measure Scoring code: %s, is not a valid Measure Scoring Type for measure: %s."
-                                .formatted(scoringCode, measure.getUrl()));
-            } else {
-                return code;
-            }
-        }
-        return null;
-    }
-
-    private static MeasureScoring getMeasureScoring(Measure measure) {
+    private MeasureScoring getMeasureScoring(Measure measure) {
         var scoringCode = measure.getScoring().getCodingFirstRep().getCode();
-        return getMeasureScoring(measure, scoringCode);
-    }
-
-    private static void validateImprovementNotationCode(Measure measure, CodeDef improvementNotation) {
-        var code = improvementNotation.code();
-        var system = improvementNotation.system();
-        boolean hasValidSystem = system.equals(MEASUREREPORT_IMPROVEMENT_NOTATION_SYSTEM);
-        boolean hasValidCode =
-                IMPROVEMENT_NOTATION_SYSTEM_INCREASE.equals(code) || IMPROVEMENT_NOTATION_SYSTEM_DECREASE.equals(code);
-        if (!hasValidCode || !hasValidSystem) {
-            throw new InvalidRequestException(
-                    "ImprovementNotation Coding has invalid System: %s, code: %s, combination for Measure: %s"
-                            .formatted(system, code, measure.getUrl()));
-        }
+        return getMeasureScoring(measure.getUrl(), scoringCode);
     }
 
     public CodeDef getMeasureBasis(Measure measure) {
@@ -278,19 +388,19 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
             var codeDef = new CodeDef(
                     improvementNotationValue.getCodingFirstRep().getSystem(),
                     improvementNotationValue.getCodingFirstRep().getCode());
-            validateImprovementNotationCode(measure, codeDef);
+            validateImprovementNotationCode(measure.getUrl(), codeDef);
             return codeDef;
         }
         return null;
     }
 
-    private static void validateMeasureImprovementNotation(Measure measure) {
+    private void validateMeasureImprovementNotation(Measure measure) {
         if (measure.hasImprovementNotation()) {
             var improvementNotationValue = measure.getImprovementNotation();
             var codeDef = new CodeDef(
                     improvementNotationValue.getCodingFirstRep().getSystem(),
                     improvementNotationValue.getCodingFirstRep().getCode());
-            validateImprovementNotationCode(measure, codeDef);
+            validateImprovementNotationCode(measure.getUrl(), codeDef);
         }
     }
 
@@ -302,7 +412,7 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
                 var codeDef = new CodeDef(
                         coding.getCodingFirstRep().getSystem(),
                         coding.getCodingFirstRep().getCode());
-                validateImprovementNotationCode(measure, codeDef);
+                validateImprovementNotationCode(measure.getUrl(), codeDef);
                 return codeDef;
             }
         }
@@ -315,7 +425,8 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
             var extVal = ext.getValue();
             assert extVal instanceof CodeableConcept;
             CodeableConcept coding = (CodeableConcept) extVal;
-            return getMeasureScoring(measure, coding.getCodingFirstRep().getCode());
+            return getMeasureScoring(
+                    measure.getUrl(), coding.getCodingFirstRep().getCode());
         }
         return null;
     }
@@ -327,39 +438,5 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
             return makeCodeDefFromExtension(ext);
         }
         return null;
-    }
-
-    private MeasureScoring getScoringDef(Measure measure, MeasureScoring measureScoring, MeasureScoring groupScoring) {
-        if (groupScoring == null && measureScoring == null) {
-            throw new InvalidRequestException(
-                    "MeasureScoring must be specified on Group or Measure for Measure: " + measure.getUrl());
-        }
-        if (groupScoring != null) {
-            return groupScoring;
-        }
-        return measureScoring;
-    }
-
-    private CodeDef getPopulationBasisDef(@Nullable CodeDef measureBasis, @Nullable CodeDef groupBasis) {
-        if (measureBasis == null && groupBasis == null) {
-            // default basis, if not defined
-            return new CodeDef(FHIR_ALL_TYPES_SYSTEM_URL, "boolean");
-        }
-        return defaultCodeDef(groupBasis, measureBasis);
-    }
-
-    private CodeDef getImprovementNotation(@Nullable CodeDef measureImpNotation, @Nullable CodeDef groupImpNotation) {
-        if (measureImpNotation == null && groupImpNotation == null) {
-            // default Improvement Notation, if not defined
-            return new CodeDef(MEASUREREPORT_IMPROVEMENT_NOTATION_SYSTEM, IMPROVEMENT_NOTATION_SYSTEM_INCREASE);
-        }
-        return defaultCodeDef(groupImpNotation, measureImpNotation);
-    }
-
-    private CodeDef defaultCodeDef(@Nullable CodeDef code, @Nullable CodeDef codeDefault) {
-        if (code != null) {
-            return code;
-        }
-        return codeDefault;
     }
 }
